Added new script.js, updated the index.html and schedule page

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide box">
                     <img src="images/shot1.png">
-                    <p>"StudySync has been a game-changer for me. Whether I'm studying or planning my day, it's the
-                        perfect companion. Highly recommend!"</p>
+                    <p>"StudySync is a game-changing companion. Highly recommend!"</p>
                     <h3>Rami</h3>
                     <div class="stars">
                         <i class='bx bxs-star'></i>
@@ -113,8 +112,7 @@
                 </div>
                 <div class="swiper-slide box">
                     <img src="images/shot2.png">
-                    <p>"StudySync greatly simplifies my life. It's a must-have for anyone who wants to excel in their
-                        studies and stay exceptionally organized."</p>
+                    <p>"StudySync simplifies and organizes studies - a must-have!"</p>
                     <h3>Sebastian</h3>
                     <div class="stars">
                         <i class='bx bxs-star'></i>
@@ -126,8 +124,7 @@
                 </div>
                 <div class="swiper-slide box">
                     <img src="images/shot3.png">
-                    <p>"Studysync is a lifesaver! It's made my study sessions more effective, and the schedule
-                        management feature keeps me on track. I love it!"</p>
+                    <p>"A lifesaver for effective studies, keeping me on track, I love it."</p>
                     <h3>Sofia</h3>
                     <div class="stars">
                         <i class='bx bxs-star'></i>
