New html schedule page
I added the actually schedule that people can use and also the js for it. I have redirected the link in schedule.html from results.html to results_schedule.html

--- a/schedule.html
+++ b/schedule.html
@@ -54,7 +54,7 @@
 
             <div class="btn-box">
                 <button type="button" id="Back2">Back</button>
-                <a href="results.html" class="btn">Submit</a>
+                <a href="results_schedule.html" class="btn">Submit</a>
             </div>
         </form>
 
