Adds functionality to the schedule

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#home" class="active">Home</a>
             <a href="schedule.html">Schedule</a>
             <a href="#service">Reminders</a>
-            <a href="results.html">Progress</a>
+            <a href="results_schedule.html">Progress</a>
             <a href="signup.html">Profile</a>
         </nav>
     </header>
