--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="schedule.css">
 </head>
 
-<body>
+<body onload="getResponse()">
     <header class="header">
         <span class="logo"><img src="images/logo.png" alt="">StudySync</span>
 
@@ -100,6 +100,7 @@
             progress.style.width = "240px";
         }
     </script>
+    <script src="src\calender.js"></script>
 </body>
 
 </html>
